src/main/resources/grammar/.antlr/PlantUmlParser.java
// Generated from /home/andi/fhdo/Lehrveranstaltungen/Bachelorarbeit/Anwenderfreundliche Smart Contracts/meivsm-compiler/src/main/resources/grammar/PlantUml.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PlantUmlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, START_UML=6, END_UML=7, START_END_STATE=8, 
		COLON=9, COMMA=10, ASSIGN_OP=11, OP_EQUAL=12, OP_LT=13, OP_LTE=14, OP_GT=15, 
		OP_GTE=16, PLUS=17, MINUS=18, DIVIDE=19, MULT=20, BRACKET_OPEN=21, BRACKET_CLOSE=22, 
		CLOSURE_OPEN=23, CLOSURE_CLOSE=24, CLOSURE=25, AND=26, OR=27, STRING=28, 
		INTEGER=29, UINTEGER=30, ADDRESS=31, BOOLEAN=32, BYTE_ARRAY=33, TRUE=34, 
		FALSE=35, ETHER=36, WEI=37, DAYS=38, SOL_GLOBAL_SENDER=39, SOL_GLOBAL_VALUE=40, 
		SOL_GLOBAL_DATE=41, SOL_GLOBAL_DATE2=42, ARROW=43, LONG_ARROW=44, LONG_ARROW_UP=45, 
		LONG_ARROW_DOWN=46, LONG_ARROW_LEFT=47, LONG_ARROW_RIGHT=48, ACTIVITY=49, 
		RETURN=50, SKINPARAM=51, NUMBER=52, HEX_COLOR=53, IDENTIFIER=54, STRING_VALUE=55, 
		VALUE=56, WS=57;
	public static final int
		RULE_skinParamCmds = 0, RULE_plantUml = 1, RULE_state = 2, RULE_stateDef = 3, 
		RULE_statement = 4, RULE_transition = 5, RULE_condition = 6, RULE_compOperator = 7, 
		RULE_mathOperator = 8, RULE_type = 9, RULE_unit = 10, RULE_timeUnit = 11, 
		RULE_val = 12, RULE_variable = 13, RULE_constant = 14, RULE_expression = 15, 
		RULE_param = 16, RULE_method = 17, RULE_arrow = 18;
	public static final String[] ruleNames = {
		"skinParamCmds", "plantUml", "state", "stateDef", "statement", "transition", 
		"condition", "compOperator", "mathOperator", "type", "unit", "timeUnit", 
		"val", "variable", "constant", "expression", "param", "method", "arrow"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Monochrome'", "'Shadowing'", "'pay'", "'pay*'", "'sent from'", 
		"'@startuml'", "'@enduml'", "'[*]'", "':'", "','", "'='", "'=='", "'<'", 
		"'<='", "'>'", "'>='", "'+'", "'-'", "'/'", "'*'", "'['", "']'", "'('", 
		"')'", "'()'", "'&'", "'|'", "'string'", "'int'", "'uint'", "'address'", 
		"'bool'", "'bytes'", "'true'", "'false'", "'ether'", "'wei'", "'days'", 
		"'sender'", "'msg.value'", "'now'", "'block.timestamp'", "'->'", "'-->'", 
		"'-u->'", "'-d->'", "'-l->'", "'-r->'", null, "'return'", "'skinparam'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, "START_UML", "END_UML", "START_END_STATE", 
		"COLON", "COMMA", "ASSIGN_OP", "OP_EQUAL", "OP_LT", "OP_LTE", "OP_GT", 
		"OP_GTE", "PLUS", "MINUS", "DIVIDE", "MULT", "BRACKET_OPEN", "BRACKET_CLOSE", 
		"CLOSURE_OPEN", "CLOSURE_CLOSE", "CLOSURE", "AND", "OR", "STRING", "INTEGER", 
		"UINTEGER", "ADDRESS", "BOOLEAN", "BYTE_ARRAY", "TRUE", "FALSE", "ETHER", 
		"WEI", "DAYS", "SOL_GLOBAL_SENDER", "SOL_GLOBAL_VALUE", "SOL_GLOBAL_DATE", 
		"SOL_GLOBAL_DATE2", "ARROW", "LONG_ARROW", "LONG_ARROW_UP", "LONG_ARROW_DOWN", 
		"LONG_ARROW_LEFT", "LONG_ARROW_RIGHT", "ACTIVITY", "RETURN", "SKINPARAM", 
		"NUMBER", "HEX_COLOR", "IDENTIFIER", "STRING_VALUE", "VALUE", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlantUml.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PlantUmlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SkinParamCmdsContext extends ParserRuleContext {
		public TerminalNode SKINPARAM() { return getToken(PlantUmlParser.SKINPARAM, 0); }
		public TerminalNode TRUE() { return getToken(PlantUmlParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(PlantUmlParser.FALSE, 0); }
		public SkinParamCmdsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_skinParamCmds; }
	}

	public final SkinParamCmdsContext skinParamCmds() throws RecognitionException {
		SkinParamCmdsContext _localctx = new SkinParamCmdsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_skinParamCmds);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(SKINPARAM);
			setState(39);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(40);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlantUmlContext extends ParserRuleContext {
		public TerminalNode START_UML() { return getToken(PlantUmlParser.START_UML, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PlantUmlParser.IDENTIFIER, 0); }
		public TerminalNode END_UML() { return getToken(PlantUmlParser.END_UML, 0); }
		public List<SkinParamCmdsContext> skinParamCmds() {
			return getRuleContexts(SkinParamCmdsContext.class);
		}
		public SkinParamCmdsContext skinParamCmds(int i) {
			return getRuleContext(SkinParamCmdsContext.class,i);
		}
		public List<StateDefContext> stateDef() {
			return getRuleContexts(StateDefContext.class);
		}
		public StateDefContext stateDef(int i) {
			return getRuleContext(StateDefContext.class,i);
		}
		public List<TransitionContext> transition() {
			return getRuleContexts(TransitionContext.class);
		}
		public TransitionContext transition(int i) {
			return getRuleContext(TransitionContext.class,i);
		}
		public PlantUmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plantUml; }
	}

	public final PlantUmlContext plantUml() throws RecognitionException {
		PlantUmlContext _localctx = new PlantUmlContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_plantUml);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(START_UML);
			setState(43);
			match(IDENTIFIER);
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SKINPARAM) {
				{
				{
				setState(44);
				skinParamCmds();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==START_END_STATE || _la==IDENTIFIER) {
				{
				setState(52);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(50);
					stateDef();
					}
					break;
				case 2:
					{
					setState(51);
					transition();
					}
					break;
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			match(END_UML);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateContext extends ParserRuleContext {
		public TerminalNode START_END_STATE() { return getToken(PlantUmlParser.START_END_STATE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PlantUmlParser.IDENTIFIER, 0); }
		public StateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state; }
	}

	public final StateContext state() throws RecognitionException {
		StateContext _localctx = new StateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_state);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_la = _input.LA(1);
			if ( !(_la==START_END_STATE || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateDefContext extends ParserRuleContext {
		public StateContext state() {
			return getRuleContext(StateContext.class,0);
		}
		public TerminalNode COLON() { return getToken(PlantUmlParser.COLON, 0); }
		public TerminalNode ACTIVITY() { return getToken(PlantUmlParser.ACTIVITY, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StateDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateDef; }
	}

	public final StateDefContext stateDef() throws RecognitionException {
		StateDefContext _localctx = new StateDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stateDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			state();
			setState(62);
			match(COLON);
			setState(63);
			match(ACTIVITY);
			setState(64);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FieldDeclrAndAssignmentContext extends StatementContext {
		public ParamContext p;
		public ValContext r;
		public TerminalNode ASSIGN_OP() { return getToken(PlantUmlParser.ASSIGN_OP, 0); }
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public ValContext val() {
			return getRuleContext(ValContext.class,0);
		}
		public FieldDeclrAndAssignmentContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ExpressionStatementContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExpressionStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class FieldDeclrAndExprAssignmentContext extends StatementContext {
		public ParamContext p;
		public ExpressionContext r;
		public TerminalNode ASSIGN_OP() { return getToken(PlantUmlParser.ASSIGN_OP, 0); }
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FieldDeclrAndExprAssignmentContext(StatementContext ctx) { copyFrom(ctx); }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new FieldDeclrAndExprAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				((FieldDeclrAndExprAssignmentContext)_localctx).p = param();
				setState(67);
				match(ASSIGN_OP);
				setState(68);
				((FieldDeclrAndExprAssignmentContext)_localctx).r = expression(0);
				}
				break;
			case 2:
				_localctx = new FieldDeclrAndAssignmentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				((FieldDeclrAndAssignmentContext)_localctx).p = param();
				setState(71);
				match(ASSIGN_OP);
				setState(72);
				((FieldDeclrAndAssignmentContext)_localctx).r = val();
				}
				break;
			case 3:
				_localctx = new ExpressionStatementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TransitionContext extends ParserRuleContext {
		public TransitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transition; }
	 
		public TransitionContext() { }
		public void copyFrom(TransitionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TransPayContext extends TransitionContext {
		public StateContext l;
		public StateContext r;
		public Token i;
		public Token v;
		public UnitContext u;
		public ArrowContext arrow() {
			return getRuleContext(ArrowContext.class,0);
		}
		public TerminalNode COLON() { return getToken(PlantUmlParser.COLON, 0); }
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public TerminalNode NUMBER() { return getToken(PlantUmlParser.NUMBER, 0); }
		public UnitContext unit() {
			return getRuleContext(UnitContext.class,0);
		}
		public TransPayContext(TransitionContext ctx) { copyFrom(ctx); }
	}
	public static class TransPayCondContext extends TransitionContext {
		public StateContext l;
		public StateContext r;
		public Token i;
		public Token v;
		public UnitContext u;
		public ConditionContext c;
		public ArrowContext arrow() {
			return getRuleContext(ArrowContext.class,0);
		}
		public TerminalNode COLON() { return getToken(PlantUmlParser.COLON, 0); }
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public TerminalNode NUMBER() { return getToken(PlantUmlParser.NUMBER, 0); }
		public UnitContext unit() {
			return getRuleContext(UnitContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TransPayCondContext(TransitionContext ctx) { copyFrom(ctx); }
	}
	public static class TransCondContext extends TransitionContext {
		public StateContext l;
		public StateContext r;
		public Token i;
		public ConditionContext c;
		public ArrowContext arrow() {
			return getRuleContext(ArrowContext.class,0);
		}
		public TerminalNode COLON() { return getToken(PlantUmlParser.COLON, 0); }
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public TerminalNode IDENTIFIER() { return getToken(PlantUmlParser.IDENTIFIER, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TransCondContext(TransitionContext ctx) { copyFrom(ctx); }
	}
	public static class TransContext extends TransitionContext {
		public StateContext l;
		public StateContext r;
		public Token i;
		public ArrowContext arrow() {
			return getRuleContext(ArrowContext.class,0);
		}
		public TerminalNode COLON() { return getToken(PlantUmlParser.COLON, 0); }
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public TerminalNode IDENTIFIER() { return getToken(PlantUmlParser.IDENTIFIER, 0); }
		public TransContext(TransitionContext ctx) { copyFrom(ctx); }
	}
	public static class TransPayStarCondContext extends TransitionContext {
		public StateContext l;
		public StateContext r;
		public Token i;
		public ConditionContext c;
		public ArrowContext arrow() {
			return getRuleContext(ArrowContext.class,0);
		}
		public TerminalNode COLON() { return getToken(PlantUmlParser.COLON, 0); }
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TransPayStarCondContext(TransitionContext ctx) { copyFrom(ctx); }
	}
	public static class TransPayStarContext extends TransitionContext {
		public StateContext l;
		public StateContext r;
		public Token i;
		public ArrowContext arrow() {
			return getRuleContext(ArrowContext.class,0);
		}
		public TerminalNode COLON() { return getToken(PlantUmlParser.COLON, 0); }
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public TransPayStarContext(TransitionContext ctx) { copyFrom(ctx); }
	}
	public static class EmptyTransContext extends TransitionContext {
		public StateContext l;
		public StateContext r;
		public ArrowContext arrow() {
			return getRuleContext(ArrowContext.class,0);
		}
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public EmptyTransContext(TransitionContext ctx) { copyFrom(ctx); }
	}

	public final TransitionContext transition() throws RecognitionException {
		TransitionContext _localctx = new TransitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_transition);
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new TransContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				((TransContext)_localctx).l = state();
				setState(78);
				arrow();
				setState(79);
				((TransContext)_localctx).r = state();
				setState(80);
				match(COLON);
				setState(81);
				((TransContext)_localctx).i = match(IDENTIFIER);
				}
				break;
			case 2:
				_localctx = new TransCondContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				((TransCondContext)_localctx).l = state();
				setState(84);
				arrow();
				setState(85);
				((TransCondContext)_localctx).r = state();
				setState(86);
				match(COLON);
				setState(87);
				((TransCondContext)_localctx).i = match(IDENTIFIER);
				setState(88);
				((TransCondContext)_localctx).c = condition();
				}
				break;
			case 3:
				_localctx = new TransPayContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				((TransPayContext)_localctx).l = state();
				setState(91);
				arrow();
				setState(92);
				((TransPayContext)_localctx).r = state();
				setState(93);
				match(COLON);
				setState(94);
				((TransPayContext)_localctx).i = match(T__2);
				setState(95);
				((TransPayContext)_localctx).v = match(NUMBER);
				setState(96);
				((TransPayContext)_localctx).u = unit();
				}
				break;
			case 4:
				_localctx = new TransPayCondContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(98);
				((TransPayCondContext)_localctx).l = state();
				setState(99);
				arrow();
				setState(100);
				((TransPayCondContext)_localctx).r = state();
				setState(101);
				match(COLON);
				setState(102);
				((TransPayCondContext)_localctx).i = match(T__2);
				setState(103);
				((TransPayCondContext)_localctx).v = match(NUMBER);
				setState(104);
				((TransPayCondContext)_localctx).u = unit();
				setState(105);
				((TransPayCondContext)_localctx).c = condition();
				}
				break;
			case 5:
				_localctx = new TransPayStarContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(107);
				((TransPayStarContext)_localctx).l = state();
				setState(108);
				arrow();
				setState(109);
				((TransPayStarContext)_localctx).r = state();
				setState(110);
				match(COLON);
				setState(111);
				((TransPayStarContext)_localctx).i = match(T__3);
				}
				break;
			case 6:
				_localctx = new TransPayStarCondContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(113);
				((TransPayStarCondContext)_localctx).l = state();
				setState(114);
				arrow();
				setState(115);
				((TransPayStarCondContext)_localctx).r = state();
				setState(116);
				match(COLON);
				setState(117);
				((TransPayStarCondContext)_localctx).i = match(T__3);
				setState(118);
				((TransPayStarCondContext)_localctx).c = condition();
				}
				break;
			case 7:
				_localctx = new EmptyTransContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(120);
				((EmptyTransContext)_localctx).l = state();
				setState(121);
				arrow();
				setState(122);
				((EmptyTransContext)_localctx).r = state();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public TerminalNode BRACKET_OPEN() { return getToken(PlantUmlParser.BRACKET_OPEN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(PlantUmlParser.BRACKET_CLOSE, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(BRACKET_OPEN);
			setState(127);
			expression(0);
			setState(128);
			match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompOperatorContext extends ParserRuleContext {
		public TerminalNode OP_EQUAL() { return getToken(PlantUmlParser.OP_EQUAL, 0); }
		public TerminalNode OP_LT() { return getToken(PlantUmlParser.OP_LT, 0); }
		public TerminalNode OP_LTE() { return getToken(PlantUmlParser.OP_LTE, 0); }
		public TerminalNode OP_GT() { return getToken(PlantUmlParser.OP_GT, 0); }
		public TerminalNode OP_GTE() { return getToken(PlantUmlParser.OP_GTE, 0); }
		public CompOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compOperator; }
	}

	public final CompOperatorContext compOperator() throws RecognitionException {
		CompOperatorContext _localctx = new CompOperatorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_compOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OP_EQUAL) | (1L << OP_LT) | (1L << OP_LTE) | (1L << OP_GT) | (1L << OP_GTE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
